--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Process of Elimination</title>
-    <link rel="icon" href="icon.png">
-    <link rel="stylesheet" type="text/css" href="style.css" title="style"/>
-    <script src="howler/dist/howler.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <title>Casual</title>
+    <link rel="icon" href="media/icon.png">
+    <link rel="stylesheet" type="text/css" href="src/style.css" title="style"/>
+    <script src="src/howler/dist/howler.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPMincho&display=swap" rel="stylesheet">
@@ -18,31 +17,12 @@
     <script>
         const {Howl, Howler} = require('howler');
     </script>
-    <img id="explode" src="EXPLODE.gif" height="100%">
     <div id="main">
-        <div>
-            <p id="progress"></p>
-            <p id="qstn"></p>
-            <button class="opt" id="opt1"></button>
-            <button class="opt" id="opt2"></button>
-            <button class="opt" id="opt3"></button>
-            <button class="opt" id="opt4"></button>
-            <button class="opt" id="opt5"></button>
-            <button class="opt" id="opt6"></button>
-            <button class="opt" id="opt7"></button>
-        </div>
-        <div>
-            <button class="player" id="p1"></button>
-            <button class="player" id="p2"></button>
-            <button class="player" id="p3"></button>
-            <button class="player" id="p4"></button>
-            <button class="player" id="p5"></button>
-            <button class="player" id="p6"></button>
-        </div>
-    </div>
-    <img id="win" src="star.jpg" height="100%">
-    <div id="wintext">
-        <p></p>
+        <br><br><br><br><br><br><br><br><br><br>
+        <p id="progress" style="font-size: 40px">Process of Elimination</p>
+        <p id="qstn" style="font-size: 22px;">Made by PuffyDucks</p>
+        <button class="nav" id="cas" onclick="window.location.href='casual.html'">Casual</button>
+        <button class="nav" id="comp"onclick="window.location.href='deathmatch.html'">Deathmatch</button>
     </div>
 </body>
 </html>
