--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script>
         const {Howl, Howler} = require('howler');
     </script>
+    <!-- todo: add instructions, questions randomizer, more questions, edit player names, cookies, reset button -->
     <div id="main">
         <br><br><br><br><br><br><br><br><br><br>
         <p id="progress" style="font-size: 40px">Process of Elimination</p>
