--- a/deathmatch.html
+++ b/deathmatch.html
@@ -33,6 +33,8 @@
             <button class="opt" id="opt5"></button>
             <button class="opt" id="opt6"></button>
             <button class="opt" id="opt7"></button>
+            <button class="opt" id="opt8"></button>
+            <button class="opt" id="opt9"></button>
         </div>
         <div id="players">
             <button class="player" id="p1"></button>
@@ -41,6 +43,8 @@
             <button class="player" id="p4"></button>
             <button class="player" id="p5"></button>
             <button class="player" id="p6"></button>
+            <button class="player" id="p7"></button>
+            <button class="player" id="p8"></button>
         </div>
     </div>
     <img id="win" src="media/star.jpg" width="100%" height="100%">
