--- a/casual.html
+++ b/casual.html
@@ -19,7 +19,7 @@
     <script>
         const {Howl, Howler} = require('howler');
     </script>
-    <img id="explode" src="media/explode.gif" width="100%" height="100%">
+    <img id="explode" src="media/explosion.gif" width="100%" height="100%">
     <div id="main">
         <div>
             <div id="title">
